// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AlertsFlyout /> spec Alerts Flyout renders component with monitor 1`] = `
<div>
  <div>
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="euiFlyout euiFlyout--small"
        role="dialog"
        tabindex="0"
      >
        <button
          aria-label="Close this dialog"
          class="euiButtonIcon euiButtonIcon--text euiFlyout__closeButton"
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
            focusable="false"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
        <div
          class="euiFlyoutHeader euiFlyoutHeader--hasBorder flyout"
        >
          <div
            class="euiText euiText--medium preview-title euiText--constrainedWidth"
          >
            <h2>
               Alerts 
            </h2>
          </div>
        </div>
        <div
          class="euiFlyoutBody"
          style="overflow-y: auto;"
        >
          <div
            class="euiFlyoutBody__overflow"
          >
            <div
              class="euiFlyoutBody__overflowContent"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                >
                  <div
                    class="euiText euiText--medium"
                  >
                    <p
                      class="alerts_flyout_p"
                    >
                      Anomaly detector alerts are powered by the
                      <a
                        class="euiLink euiLink--primary"
                        href="https://opendistro.github.io/for-elasticsearch-docs/docs/alerting"
                        rel="noreferrer"
                      >
                         
                        Alerting plugin
                      </a>
                      . If you don't see 
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--medium euiIcon-isLoading"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                      Alerting in your navigation panel,
                      <a
                        class="euiLink euiLink--primary"
                        href="https://opendistro.github.io/for-elasticsearch-docs/docs/install/plugins/#alerting"
                        rel="noreferrer"
                      >
                         
                        install it first
                      </a>
                       
                      and follow the instructions below to set up alerts.
                    </p>
                  </div>
                </div>
                <div
                  class="euiFlexItem"
                >
                  <div
                    class="euiSteps"
                  >
                    <div
                      class="euiStep"
                    >
                      <div
                        class="euiStep__titleWrapper"
                      >
                        <div
                          aria-label="Step 1"
                          class="euiStepNumber euiStep__circle"
                        >
                          1
                        </div>
                        <p
                          class="euiTitle euiTitle--small euiStep__title"
                        >
                          Create a monitor
                        </p>
                      </div>
                      <div
                        class="euiStep__content"
                      >
                        <p
                          class="alerts_flyout_p"
                        >
                          A monitor queries a detector on a specific schedule. In Alerting, choose "Define using anomaly detector".
                        </p>
                      </div>
                    </div>
                    <div
                      class="euiStep"
                    >
                      <div
                        class="euiStep__titleWrapper"
                      >
                        <div
                          aria-label="Step 2"
                          class="euiStepNumber euiStep__circle"
                        >
                          2
                        </div>
                        <p
                          class="euiTitle euiTitle--small euiStep__title"
                        >
                          Define triggers and actions
                        </p>
                      </div>
                      <div
                        class="euiStep__content"
                      >
                        <p
                          class="alerts_flyout_p"
                        >
                          Triggers specify the thresholds for anomalies to generate alerts. Actions specify the alert message and destination.
                        </p>
                      </div>
                    </div>
                    <div
                      class="euiStep"
                    >
                      <div
                        class="euiStep__titleWrapper"
                      >
                        <div
                          aria-label="Step 3"
                          class="euiStepNumber euiStep__circle"
                        >
                          3
                        </div>
                        <p
                          class="euiTitle euiTitle--small euiStep__title"
                        >
                          View alerts from detector and monitor
                        </p>
                      </div>
                      <div
                        class="euiStep__content"
                      >
                        <p
                          class="alerts_flyout_p"
                        >
                          View anomaly detector alerts on the anomaly history graph. See details of all alerts over time from the monitor.
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFlyoutFooter"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem"
            >
              <a
                class="euiButton euiButton--primary"
                data-test-subj="setUpAlerts"
                href="https://opendistro.github.io/for-elasticsearch-docs/docs/alerting"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="euiButtonContent euiButton__content"
                >
                  <span
                    class="euiButton__text"
                  >
                    Explore Alerting 
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--small euiIcon-isLoading"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </span>
                </span>
              </a>
            </div>
            <div
              class="euiFlexItem"
            >
              <a
                class="euiButton euiButton--primary euiButton--fill"
                detectorid="GILVg3EBhaIh92zvX8uE"
                detectorinterval="1"
                detectorname="test detector"
                href="/899c56c6-99d0-539b-8"
                monitor="[object Object]"
                rel="noreferrer"
                unit="Minutes"
              >
                <span
                  class="euiButtonContent euiButton__content"
                >
                  <span
                    class="euiButton__text"
                  >
                    Edit alert settings
                  </span>
                </span>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`<AlertsFlyout /> spec Alerts Flyout renders component with undefined monitor 1`] = `
<div>
  <div>
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="euiFlyout euiFlyout--small"
        role="dialog"
        tabindex="0"
      >
        <button
          aria-label="Close this dialog"
          class="euiButtonIcon euiButtonIcon--text euiFlyout__closeButton"
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="euiIcon euiIcon--medium euiButtonIcon__icon"
            focusable="false"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.293 8L3.146 3.854a.5.5 0 11.708-.708L8 7.293l4.146-4.147a.5.5 0 01.708.708L8.707 8l4.147 4.146a.5.5 0 01-.708.708L8 8.707l-4.146 4.147a.5.5 0 01-.708-.708L7.293 8z"
            />
          </svg>
        </button>
        <div
          class="euiFlyoutHeader euiFlyoutHeader--hasBorder flyout"
        >
          <div
            class="euiText euiText--medium preview-title euiText--constrainedWidth"
          >
            <h2>
               Alerts 
            </h2>
          </div>
        </div>
        <div
          class="euiFlyoutBody"
          style="overflow-y: auto;"
        >
          <div
            class="euiFlyoutBody__overflow"
          >
            <div
              class="euiFlyoutBody__overflowContent"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive"
              >
                <div
                  class="euiFlexItem"
                >
                  <div
                    class="euiText euiText--medium"
                  >
                    <p
                      class="alerts_flyout_p"
                    >
                      Anomaly detector alerts are powered by the
                      <a
                        class="euiLink euiLink--primary"
                        href="https://opendistro.github.io/for-elasticsearch-docs/docs/alerting"
                        rel="noreferrer"
                      >
                         
                        Alerting plugin
                      </a>
                      . If you don't see 
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--medium"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M2.316 12h10.368c-.188-.704-.28-1.691-.348-3.037-.07-1.382-.103-1.888-.19-2.612-.028-.236-.06-.462-.096-.68-.31-1.892-1.506-2.923-3.708-3.131a1 1 0 10-1.684 0c-2.202.208-3.397 1.24-3.708 3.13a16.01 16.01 0 00-.096.68c-.087.725-.12 1.23-.19 2.613-.068 1.346-.16 2.333-.348 3.037zm10.843 1H1.84c-.308.353-.737.5-1.341.5a.5.5 0 110-1c.786 0 1.024-.783 1.166-3.587.07-1.407.105-1.926.196-2.681.03-.25.063-.49.102-.724.334-2.041 1.546-3.313 3.556-3.792a2 2 0 013.96 0c2.01.479 3.222 1.75 3.557 3.792a17 17 0 01.102.724c.09.755.125 1.274.196 2.681.14 2.804.379 3.587 1.165 3.587a.5.5 0 110 1c-.604 0-1.033-.147-1.341-.5zM5.5 14h4a2 2 0 11-4 0z"
                          fill-rule="evenodd"
                        />
                      </svg>
                      Alerting in your navigation panel,
                      <a
                        class="euiLink euiLink--primary"
                        href="https://opendistro.github.io/for-elasticsearch-docs/docs/install/plugins/#alerting"
                        rel="noreferrer"
                      >
                         
                        install it first
                      </a>
                       
                      and follow the instructions below to set up alerts.
                    </p>
                  </div>
                </div>
                <div
                  class="euiFlexItem"
                >
                  <div
                    class="euiSteps"
                  >
                    <div
                      class="euiStep"
                    >
                      <div
                        class="euiStep__titleWrapper"
                      >
                        <div
                          aria-label="Step 1"
                          class="euiStepNumber euiStep__circle"
                        >
                          1
                        </div>
                        <p
                          class="euiTitle euiTitle--small euiStep__title"
                        >
                          Create a monitor
                        </p>
                      </div>
                      <div
                        class="euiStep__content"
                      >
                        <p
                          class="alerts_flyout_p"
                        >
                          A monitor queries a detector on a specific schedule. In Alerting, choose "Define using anomaly detector".
                        </p>
                      </div>
                    </div>
                    <div
                      class="euiStep"
                    >
                      <div
                        class="euiStep__titleWrapper"
                      >
                        <div
                          aria-label="Step 2"
                          class="euiStepNumber euiStep__circle"
                        >
                          2
                        </div>
                        <p
                          class="euiTitle euiTitle--small euiStep__title"
                        >
                          Define triggers and actions
                        </p>
                      </div>
                      <div
                        class="euiStep__content"
                      >
                        <p
                          class="alerts_flyout_p"
                        >
                          Triggers specify the thresholds for anomalies to generate alerts. Actions specify the alert message and destination.
                        </p>
                      </div>
                    </div>
                    <div
                      class="euiStep"
                    >
                      <div
                        class="euiStep__titleWrapper"
                      >
                        <div
                          aria-label="Step 3"
                          class="euiStepNumber euiStep__circle"
                        >
                          3
                        </div>
                        <p
                          class="euiTitle euiTitle--small euiStep__title"
                        >
                          View alerts from detector and monitor
                        </p>
                      </div>
                      <div
                        class="euiStep__content"
                      >
                        <p
                          class="alerts_flyout_p"
                        >
                          View anomaly detector alerts on the anomaly history graph. See details of all alerts over time from the monitor.
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFlyoutFooter"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem"
            >
              <a
                class="euiButton euiButton--primary"
                data-test-subj="setUpAlerts"
                href="https://opendistro.github.io/for-elasticsearch-docs/docs/alerting"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="euiButtonContent euiButton__content"
                >
                  <span
                    class="euiButton__text"
                  >
                    Explore Alerting 
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--small"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M13 8.5a.5.5 0 111 0V12a2 2 0 01-2 2H4a2 2 0 01-2-2V4a2 2 0 012-2h3.5a.5.5 0 010 1H4a1 1 0 00-1 1v8a1 1 0 001 1h8a1 1 0 001-1V8.5zm-5.12.339a.5.5 0 11-.706-.707L13.305 2H10.5a.5.5 0 110-1H14a1 1 0 011 1v3.5a.5.5 0 11-1 0V2.72L7.88 8.838z"
                      />
                    </svg>
                  </span>
                </span>
              </a>
            </div>
            <div
              class="euiFlexItem"
            >
              <button
                class="euiButton euiButton--primary euiButton--fill"
                detectorid="GILVg3EBhaIh92zvX8uE"
                detectorinterval="1"
                detectorname="test detector"
                type="button"
                unit="Minutes"
              >
                <span
                  class="euiButtonContent euiButton__content"
                >
                  <span
                    class="euiButton__text"
                  >
                    Set up alerts
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</div>
`;
